# server_test2

./: .gitignore  .pre-commit-config.yaml  BUILD  Dockerfile  Makefile  README.md  build.sh  environment-cpu.yaml  environment.yaml  pants.toml  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test_env.py  test_integration.py
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  templete-sync.yaml  test.yml
EP2/eqprop/: strategy.py
EP2/models/: eqprop_module.py
configs/: __init__.py  data.py  eval.yaml  train.yaml
configs/aihw/: default.yaml
configs/callbacks/: default.yaml  eqprop_track.yaml
configs/data/: cifar10.yaml  mnist.py  mnist.yaml  xor.yaml
configs/debug/: fdr100.yaml  memleak.yaml
configs/eqprop/: solver.py
configs/experiment/: eqprop.yaml  example.yaml  experiment.py
configs/hparams_search/: mnist_optuna.yaml
configs/local/: example.yaml
configs/logger/: wandb.yaml
configs/model/: eqprop.py  loss.py  mlp.py  mnist.py  mnist.yaml  mnist_eqprop.yaml  mnist_eqprop_gdst.yaml  mnist_eqprop_mse.yaml  mnist_eqprop_sgd.yaml  mnist_vae.yaml  optimizer.py  resnet.py  rpu_config.py  scheduler.py  xor_eqprop.yaml
configs/paths/: default.yaml
configs/profiler/: advanced.yaml
configs/rpu_config/: analog_rpu.py
configs/trainer/: default.yaml
eqprop/: E_minimizer.py  __init__.py  eqprop_util.py  solver.py  strategy.py
eqprop/nn/: module.py  modules.py
eqprop/notebooks/: benchmark.ipynb  configtest.ipynb  model fitting.ipynb  model_fitting.ipynb  newton_solver.ipynb  playground.ipynb  profile.ipynb  scipy_solver.ipynb  toy_example.ipynb
eqprop/xyce_util/: MyCircuit.py  NetlistWriter.py  circuits.py  config.py  shallowcircuit.py  subcircuits.py  util.py  weightClipper.py  xyce.py
models/: base_ann_module.py  eqprop_module.py  mnist_vae_module.py  vae_decoder.py
models/components/: E_minimizer.py  eqprop_backbone.py  simple_vae.py  vgg11.py
notebooks/: 1.0-lhr-torch-benchmark.ipynb  2.0-lhr-hydra-zen.ipynb  3.0-lhr-compare-grad-cosine-similarity.ipynb  3.0-lhr-program-scheme.ipynb  4.0-lhr-visualize-NN.ipynb  5.0-lhr-perf-profile.ipynb  5.0-lhr-perf_profile.ipynb  playground.ipynb
notebooks/aihwkit/: 01_simple_layer.py  1.0-ibm-simple-layer.ipynb  1.0-lhr-debug-tiles.ipynb  3.0-ibm-mnist.ipynb  programming_error.ipynb
notebooks/eqprop/: .old.ipynb  configtest.ipynb  eqprop-modules.ipynb  fast_eval.ipynb  newton_solver.ipynb  ots-plot.ipynb  perturbation.ipynb  profile.ipynb  (+4 more)
scripts/: extract_imagenet.sh
src/: eval.py  train.py
tests/: conftest.py  test_configs.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
(+91 files in other folders)
