[project]
requires-python = ">=3.10"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
exclude = [
  "logs/*",
  "data/*",
]

[tool.ruff.lint]
ignore = ["E203","E402","E501","F401","F841"]
extend-select = [
  "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"src/prog_scheme/kalman.py" = ["F821"]

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-setters = false
exclude = ["setup.py", "docs", "build"]
